1.html changes done locally

--- a/1.html
+++ b/1.html
@@ -1,5 +1,6 @@
 <html>
 <body>
 <div>Hello GIT</div>
+<div>Hi changes done locally and trying to push back again to repository</div>
 </body>
 </html>
