--- a/1.html
+++ b/1.html
@@ -2,5 +2,6 @@
 <body>
 <div>Hello GIT</div>
 <div>Hi changes done locally and trying to push back again to repository</div>
+  <div>Status check after pulling files</div>
 </body>
 </html>
